# movie_reviews_backend

./: .gitignore  Cargo.toml  Procfile  README.md
migrations/20170803062133_create_users/: up.sql
migrations/20170818112248_create_categories/: down.sql  up.sql
migrations/20170818112443_create_movies/: up.sql
migrations/20170818115325_create_reviews/: up.sql
src/: lib.rs  main.rs  middlewares.rs  models.rs  routes.rs
src/controllers/: auth.rs  mod.rs  review.rs  user.rs
src/models/: auth.rs  category.rs  mod.rs  movie.rs  review.rs  user.rs
src/repositories/: mod.rs  review_repository.rs  user_repository.rs
src/utils/: auth.rs  mod.rs  url_helpers.rs  validation.rs
