[package]
name = "movie_reviews_backend"
version = "0.1.0"
authors = ["Miro Dojkic <mdojkic@gmail.com>"]

[dependencies]
iron = "0.5.*"
router = "*"
dotenv = "0.10.1"
diesel = { version = "0.15.0", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
